lib_LTLIBRARIES = app_impv.la app_impvbaw.la app_impv2.la app_impv3.la         \
app_greeks.la app_greeksbaw.la app_greeks2.la app_greeks3.la app_vxo.la        \
app_sse50etf.la app_quote.la
app_impv_la_SOURCES = norms.c bs.c impv.c app_impv.c
app_impv_la_CPPFLAGS = -I$(top_srcdir)/include
app_impv_la_CFLAGS = -fPIC -Wall
app_impv_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_impvbaw_la_SOURCES = norms.c bs.c baw.c impv.c app_impvbaw.c
app_impvbaw_la_CPPFLAGS = -I$(top_srcdir)/include
app_impvbaw_la_CFLAGS = -fPIC -Wall
app_impvbaw_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_impv2_la_SOURCES = binomial.c impv.c app_impv2.c
app_impv2_la_CPPFLAGS = -I$(top_srcdir)/include
app_impv2_la_CFLAGS = -fPIC -Wall
app_impv2_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_impv3_la_SOURCES = trinomial.c impv.c app_impv3.c
app_impv3_la_CPPFLAGS = -I$(top_srcdir)/include
app_impv3_la_CFLAGS = -fPIC -Wall
app_impv3_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_greeks_la_SOURCES = norms.c bs.c app_greeks.c
app_greeks_la_CPPFLAGS = -I$(top_srcdir)/include
app_greeks_la_CFLAGS = -fPIC -Wall
app_greeks_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_greeksbaw_la_SOURCES = norms.c bs.c baw.c app_greeksbaw.c
app_greeksbaw_la_CPPFLAGS = -I$(top_srcdir)/include
app_greeksbaw_la_CFLAGS = -fPIC -Wall
app_greeksbaw_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_greeks2_la_SOURCES = binomial.c app_greeks2.c
app_greeks2_la_CPPFLAGS = -I$(top_srcdir)/include
app_greeks2_la_CFLAGS = -fPIC -Wall
app_greeks2_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_greeks3_la_SOURCES = trinomial.c app_greeks3.c
app_greeks3_la_CPPFLAGS = -I$(top_srcdir)/include
app_greeks3_la_CFLAGS = -fPIC -Wall
app_greeks3_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_sse50etf_la_SOURCES = app_sse50etf.c
app_sse50etf_la_CPPFLAGS = -I$(top_srcdir)/include
app_sse50etf_la_CFLAGS = -fPIC -Wall
app_sse50etf_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_vxo_la_SOURCES = app_vxo.c
app_vxo_la_CPPFLAGS = -I$(top_srcdir)/include
app_vxo_la_CFLAGS = -fPIC -Wall
app_vxo_la_LDFLAGS = -module -avoid-version -ltcmalloc
app_quote_la_SOURCES = app_quote.c
app_quote_la_CPPFLAGS = -I$(top_srcdir)/include
app_quote_la_CFLAGS = -fPIC -Wall
app_quote_la_LDFLAGS = -module -avoid-version -ltcmalloc

